Fix form and table column color

--- a/src/components/personnelForm/personnelForm.css
+++ b/src/components/personnelForm/personnelForm.css
@@ -58,7 +58,7 @@ form .field-group:last-child .field {
 
 .form {
   border: 1px #1b1b1b solid !important;
-  background-color: #0f1830;
+  background-color: #2a343e;
   border-radius: 9px;
   width: 500px;
   box-shadow: 0px 0px 10px 1px #f5f5f5;
