--- a/src/components/personnelList/personnelList.css
+++ b/src/components/personnelList/personnelList.css
@@ -1,52 +1,3 @@
-.personnelTable {
-  width: 100%;
-  font-size: 16px;
-  margin-top: 0px;
-}
-
-tbody tr td.selected {
-  background-color: #000;
-}
-
-tr.highlighted td {
-  transition-duration: 0.7s;
-  background-color: #0e6883;
-  color: #fff;
-}
-
-.personnelTable th {
-  position: sticky;
-  top: 0;
-  background-color: #2a343e;
-  text-align: center;
-  padding: 17px 0px 17px 0px;
-  color: #fff;
-}
-
-.personnelTable td {
-  padding: 10px 0px 10px 0px;
-}
-
-.personnelTable td:first-child {
-  text-align: center;
-}
-
-tr:nth-child(even) {
-  background-color: #f2f2f2;
-}
-
-tr:nth-child(odd) {
-  background-color: #e2e2e2;
-}
-
-.center {
-  text-align: center;
-}
-
-.textIndent {
-  text-indent: 5px;
-}
-
 .iconSet {
   font-size: 18px;
 }
@@ -54,10 +5,6 @@ tr:nth-child(odd) {
 .fa-user-edit {
   margin-right: 10px;
   color: #1cc10f;
-}
-
-.blue {
-  color: #175466;
 }
 
 .fa-check {
@@ -78,4 +25,39 @@ tr:nth-child(odd) {
 
 .fa-icon:hover {
   transform: scale(1);
+}
+
+.user-list-title {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  background-color: #175466;
+  color: white;
+  align-items: center;
+  font-weight: bold;
+}
+
+.user-list-title span {
+  padding: 20px 0;
+  border-right: 1px solid #c2c2c2;
+  text-align: center;
+}
+
+.user-list-title span:last-child {
+  border-right: none;
+}
+
+.user-list-content {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  text-indent: 10px;
+}
+
+.user-list-content span {
+  padding: 10px 0;
+  border-right: 1px solid #c2c2c2;
+  border-bottom: 1px solid #c2c2c2;
+}
+
+.user-list-content span:last-child {
+  text-align: center;
 }
